k8s/account-management-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-management-service
  labels:
    app: account-management-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: account-management-service
    tier: saccomizi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-management-service
  labels:
    app: account-management-service
spec:
  selector:
    matchLabels: 
      app: account-management-service
      tier: saccomizi
  template:
    metadata:
      labels:
        app: account-management-service
        tier: saccomizi
    spec:
      containers:
        - image: saccomizi/account-management-service:latest
          name: account-management-service
          imagePullPolicy: Never
