k8s/mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: saccomizi-mariadb
  labels:
    app: saccomizi-mariadb
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: saccomizi-mariadb
    tier: mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saccomizi-mariadb
  labels:
    app: saccomizi
spec:
  selector:
    matchLabels:
      app: saccomizi-mariadb
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: saccomizi-mariadb
        tier: mariadb
    spec:
      containers:
      - image: mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mariadb
        - name: config-volume
          mountPath: /etc/mysql/mariadb.conf.d/50-server.cnf
          subPath: mariadb.cnf
        - name: initdb-scripts
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
      - name: initdb-scripts
        configMap:
          name: mariadb-init-scripts
      - name: config-volume
        configMap:
          name: mariadb-config
