k8s/notification-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: saccomizi-notification-service
  labels:
    app: saccomizi-notification-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: notification-service
    tier: saccomizi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saccomizi-notification-service
  labels:
    app: saccomizi-notification-service
spec:
  selector:
    matchLabels: 
      app: saccomizi-notification-service
      tier: saccomizi
  template:
    metadata:
      labels:
        app: saccomizi-notification-service
        tier: saccomizi
    spec:
      containers:
        - image: saccomizi/notification-service:latest
          name: saccomizi-notification-service
          imagePullPolicy: Never
