k8s/user-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: saccomizi-user-service
  labels:
    app: saccomizi-user-service
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
      targetPort: 8080
  selector:
    app: saccomizi-user-service
    tier: saccomizi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saccomizi-user-service
  labels:
    app: saccomizi-user-service
spec:
  selector:
    matchLabels: 
      app: saccomizi-user-service
      tier: saccomizi
  template:
    metadata:
      labels:
        app: saccomizi-user-service
        tier: saccomizi
    spec:
      containers:
        - image: saccomizi/user-service:latest
          name: user-service
          imagePullPolicy: Never
